--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/kmgumienny/a4-webapp#readme",
   "dependencies": {
+    "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
-    "mongoose": "^5.2.18",
-    "mustache": "^3.0.0"
+    "mongoose": "^5.2.18"
   }
 }
