--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "a4-webapp",
   "version": "1.0.0",
   "description": "Assignment 4 - Real Web Apps: Designing for an Area of Life   ===",
-  "main": "server.js",
+  "main": "old files/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/kmgumienny/a4-webapp#readme",
   "dependencies": {
-    "handlebars": "^4.0.12",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "jquery": "^3.3.1",
     "mongoose": "^5.2.18"
   }
